--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typeorm": "ts-node ./node_modules/typeorm/cli --config ormconfig.ts"
   },
   "dependencies": {
+    "@nestjs/axios": "^0.0.3",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.0.0",
@@ -34,7 +35,10 @@
     "@nestjs/typeorm": "^8.0.2",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
+    "express-handlebars": "^6.0.1",
+    "hbs": "^4.1.2",
     "mysql2": "^2.3.3-rc.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -49,6 +53,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
