--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^10.0.0",
     "express-handlebars": "^6.0.1",
     "hbs": "^4.1.2",
+    "lodash": "^4.17.21",
     "mysql2": "^2.3.3-rc.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -56,6 +57,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.177",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
