feat(locations): add search and current weather endpoints

--- a/example.env
+++ b/example.env
@@ -1,5 +1,6 @@
 # check this, if defined, do not run dotenv.config() again
 DOTENV_CONFIGURED=1
+IS_DEVELOPMENT=0
 
 DB__HOST=localhost
 DB__PORT=6603
